@@ -1,5 +1,5 @@
 Maintainers:
-	Luca Falavigna <dktrkranz@ubuntu.com>
+	Luca Falavigna <dktrkranz@debian.org>
 
 Contributors:
 	David Futcher <bobbo@ubuntu.com>
