@@ -25,7 +25,7 @@ By default, debomatic runs in full daemon mode and it detaches itself
 from its parent. If you do not want this, you can use this option and
 debomatic will not detach from parent process.
 .SH COPYRIGHT
-This manual page is Copyright 2007-2009 Luca Falavigna <dktrkranz@ubuntu.com>.
+This manual page is Copyright 2007-2009 Luca Falavigna <dktrkranz@debian.org>.
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU General Public License, Version 3 or any later
 version published by the Free Software Foundation.
