@@ -43,7 +43,7 @@ If enabled, allow modules to be plugged in at runtime.
 .B modulespath
 This directory contains modules to be plugged in at runtime.
 .SH COPYRIGHT
-This manual page is Copyright 2007-2009 Luca Falavigna <dktrkranz@ubuntu.com>.
+This manual page is Copyright 2007-2009 Luca Falavigna <dktrkranz@debian.org>.
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU General Public License, Version 3 or any later
 version published by the Free Software Foundation.
