@@ -4,7 +4,7 @@
 # Copyright (C) 2008-2009 Luca Falavigna
 #
 # Authors: David Futcher <bobbo@ubuntu.com>
-#          Luca Falavigna <dktrkranz@ubuntu.com>
+#          Luca Falavigna <dktrkranz@debian.org>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
