@@ -1,3 +1,6 @@
+  141 Luca Falavigna	2009-09-02
+      Update e-mail address
+
   140 Luca Falavigna	2009-06-22
       Adjust Makefile to install files to correct locations
 
